1.修复镜像中路径下载存在中文的时候下载异常的问题